# cpp-project-template

./: .gitignore  CMakeLists.txt
src/: main.cpp
